small bug fixes; blast markers now covering certain units that should be covered and the message box going off the screen.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -40,7 +40,14 @@ canvas {
 
 #messages {
     margin: 5px 20px;
-    padding: 0;
+    padding: 0;   
+}
+
+#message-box{
+    overflow: auto;
+    max-height: 90%;
+    display: flex;
+    flex-direction: column-reverse;
 }
 
 #message-input {
@@ -63,8 +70,7 @@ canvas {
     flex-wrap: wrap; */
     padding: 0;
 	position: absolute;
-	right: 0px;	
-	
+    right: 0px;		
 }
 
 #gameContainer {
